samples/_failures_safe/1761500969_265d1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f231082.c: In function ‘main’:
./samples/SAFE/__tmp_9f231082.c:157:5: error: expected expression at end of input
  157 |     if (!init_file_data(&input,
      |     ^~
./samples/SAFE/__tmp_9f231082.c:157:5: error: expected declaration or statement at end of input
